# Generated by Django 6.0.3 on 2026-03-27 11:03

import django.db.models.deletion
import uuid
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('accounts', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='HealthcareProvider',
            fields=[
                ('provider_id', models.OneToOneField(db_column='provider_id', on_delete=django.db.models.deletion.CASCADE, primary_key=True, serialize=False, to=settings.AUTH_USER_MODEL)),
                ('specialization', models.CharField(max_length=200)),
                ('license_number', models.CharField(max_length=100, unique=True)),
                ('years_experience', models.IntegerField(blank=True, null=True)),
                ('bio', models.TextField(blank=True, null=True)),
                ('consultation_fee', models.DecimalField(blank=True, decimal_places=2, max_digits=10, null=True)),
                ('verification_status', models.CharField(choices=[('pending', 'Pending'), ('approved', 'Approved'), ('rejected', 'Rejected'), ('suspended', 'Suspended')], default='pending', max_length=20)),
                ('verification_notes', models.TextField(blank=True, null=True)),
                ('verified_at', models.DateTimeField(blank=True, null=True)),
                ('is_available', models.BooleanField(default=False)),
                ('rating', models.DecimalField(decimal_places=2, default=0.0, max_digits=3)),
                ('total_consultations', models.IntegerField(default=0)),
                ('verified_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='verified_providers', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'db_table': 'healthcare_providers',
            },
        ),
        migrations.CreateModel(
            name='ProviderCredential',
            fields=[
                ('credential_id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('document_type', models.CharField(choices=[('license', 'License'), ('degree', 'Degree'), ('certificate', 'Certificate'), ('id', 'ID')], max_length=20)),
                ('document_url', models.URLField(max_length=500)),
                ('uploaded_at', models.DateTimeField(auto_now_add=True)),
                ('is_verified', models.BooleanField(default=False)),
                ('provider', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='credentials', to='providers.healthcareprovider')),
            ],
            options={
                'db_table': 'provider_credentials',
            },
        ),
    ]
