@startuml er_diagram
' --------------------------------------------------------------
' Entity-Relationship Diagram - database schema view
' Figure 3.9 in the BTech report
' --------------------------------------------------------------
title Clinix - Entity-Relationship Diagram

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam defaultFontName "Inter, Helvetica, sans-serif"
skinparam defaultFontSize 11
skinparam ClassBorderColor #1F4E79
skinparam ClassBackgroundColor #EAF2F9
hide methods

entity "users" as users {
  *user_id : UUID <<PK>>
  --
  phone_number : String
  email : String
  password_hash : String
  user_type : String
  full_name : String
  language_pref : String
  created_at : DateTime
}

entity "patients" as patients {
  *patient_id : UUID <<PK, FK users>>
  --
  date_of_birth : Date
  gender : String
  blood_type : String
  allergies : Text[]
  chronic_conditions : Text[]
}

entity "healthcare_providers" as providers {
  *provider_id : UUID <<PK, FK users>>
  --
  specialty : String
  license_number : String
  years_experience : Integer
  consultation_fee : Decimal
  verification_status : String
  rating : Float
}

entity "appointments" as appointments {
  *appointment_id : UUID <<PK>>
  --
  patient_id : UUID <<FK>>
  provider_id : UUID <<FK>>
  scheduled_at : DateTime
  duration_minutes : Integer
  appointment_type : String
  status : String
}

entity "consultations" as consultations {
  *consultation_id : UUID <<PK>>
  --
  appointment_id : UUID <<FK>>
  webrtc_session_id : String
  recording_url : String
  diagnosis : Text
}

entity "medical_records" as records {
  *record_id : UUID <<PK>>
  --
  patient_id : UUID <<FK>>
  consultation_id : UUID <<FK>>
  symptoms : Text[]
  diagnosis : Text
  treatment_plan : Text
  is_ai_draft : Boolean
  is_published : Boolean
}

entity "prescriptions" as prescriptions {
  *prescription_id : UUID <<PK>>
  --
  consultation_id : UUID <<FK>>
  patient_id : UUID <<FK>>
  provider_id : UUID <<FK>>
  medications : JSON
  valid_until : Date
}

entity "medication_reminders" as reminders {
  *reminder_id : UUID <<PK>>
  --
  prescription_id : UUID <<FK>>
  patient_id : UUID <<FK>>
  reminder_times : JSON
  is_active : Boolean
}

entity "payments" as payments {
  *payment_id : UUID <<PK>>
  --
  appointment_id : UUID <<FK>>
  amount : Decimal
  currency : String
  payment_method : String
  status : String
  provider_payout : Decimal
}

entity "locations" as locations {
  *location_id : UUID <<PK>>
  --
  provider_id : UUID <<FK>>
  latitude : Double
  longitude : Double
  address : String
}

entity "verification_requests" as ver {
  *request_id : UUID <<PK>>
  --
  provider_id : UUID <<FK>>
  document_type : String
  document_url : String
  reviewed_by : UUID <<FK users>>
  status : String
  reviewed_at : DateTime
}

users        ||--o| patients
users        ||--o| providers
patients     ||--o{ appointments
providers    ||--o{ appointments
appointments ||--|| consultations
consultations ||--o{ records
consultations ||--o{ prescriptions
prescriptions ||--o{ reminders
appointments ||--o| payments
providers    ||--o{ locations
providers    ||--o{ ver
@enduml
